fixing button lost text on mobile view

--- a/src/Components/css/Contact.css
+++ b/src/Components/css/Contact.css
@@ -41,7 +41,7 @@ form > input{
     border-right: none;
 }
 form > button:hover{
-    scale: 1.08;
+    transform: scale(1.08);
 }
 .message{
     padding-left: 10px;
